[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01-first"

[[bin]]
name = "day01-second"

[[bin]]
name = "day02-first"

[[bin]]
name = "day02-second"

[[bin]]
name = "day03-first"

[[bin]]
name = "day03-second"

[[bin]]
name = "day04-first"

[[bin]]
name = "day04-second"

[[bin]]
name = "day05-first"

[[bin]]
name = "day05-second"

[dependencies]
